[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://MenuButton.gd" type="Script" id=2]
[ext_resource path="res://L_10646.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0980392, 0.0627451, 0.0627451, 1 )

[node name="Control" type="Control"]
margin_right = 1026.0
margin_bottom = 597.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Login" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -257.5
margin_right = 255.0
margin_bottom = 256.5
__meta__ = {
"_edit_lock_": true
}

[node name="email" type="LineEdit" parent="Login"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 154.0
margin_top = -24.0
margin_right = 279.0
text = "new11ff1@gmail.com"

[node name="Label" type="Label" parent="Login/email"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_top = -14.0
margin_right = 41.0
text = "E-mail
"
align = 1

[node name="password" type="LineEdit" parent="Login"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -221.5
margin_top = -23.5
margin_right = -96.5
margin_bottom = 0.5
text = "paroota45"

[node name="Label" type="Label" parent="Login/password"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_top = -14.0
margin_right = 41.0
text = "Password"
align = 1

[node name="login" type="Button" parent="Login"]
margin_left = 235.0
margin_top = 267.0
margin_right = 325.0
margin_bottom = 287.0
text = "Login"

[node name="signup" type="Button" parent="Login"]
margin_left = 236.0
margin_top = 318.0
margin_right = 326.0
margin_bottom = 338.0
text = "Signup"

[node name="reset" type="Button" parent="Login"]
margin_left = 225.0
margin_top = 342.0
margin_right = 337.0
margin_bottom = 362.0
text = "Reset Password"

[node name="rememberME" type="Label" parent="Login"]
margin_left = 210.0
margin_top = 291.0
margin_right = 350.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = " remember me     "
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="Login/rememberME"]
margin_left = 114.0
margin_top = -10.0
margin_right = 138.0
margin_bottom = 36.0
focus_mode = 0
enabled_focus_mode = 0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 498.0
margin_top = 106.0
margin_right = 556.0
margin_bottom = 130.0
text = "Hello WORLD1"

[node name="MenuButton" type="MenuButton" parent="."]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 2 )

[node name="Create" type="Button" parent="."]
visible = false
margin_left = 133.0
margin_top = 129.0
margin_right = 227.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="Create"]
margin_left = 179.0
margin_top = -15.0
margin_right = 305.0
margin_bottom = 10.0
text = "Send Message"

[node name="LobbyName" type="TextEdit" parent="Create"]
margin_left = 120.0
margin_top = 7.0
margin_right = 314.0
margin_bottom = 25.0

[node name="Chat" type="Panel" parent="."]
visible = false
margin_left = 364.0
margin_top = 183.0
margin_right = 574.0
margin_bottom = 413.0

[node name="Name" type="Label" parent="Chat"]
margin_right = 130.0
margin_bottom = 14.0
text = "Name"

[node name="RichTextLabel" type="RichTextLabel" parent="Chat"]
margin_left = 19.0
margin_top = 29.0
margin_right = 186.0
margin_bottom = 209.0

[node name="SteamName" type="Label" parent="."]
margin_left = 530.0
margin_top = 149.0
margin_right = 612.0
margin_bottom = 163.0
text = "steam Name"

[connection signal="button_up" from="Login/login" to="." method="_on_login_button_up"]
[connection signal="button_up" from="Login/signup" to="." method="_on_signup_button_up"]
[connection signal="button_up" from="Login/reset" to="." method="_on_reset_button_up"]
[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
